# humble-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conandata.yml  conanfile.py  main.cpp
.github/workflows/: ci.yml
cmake/: HumbleEngineConfig.cmake.in  README.md  tests.cmake
include/: Engine.h  engine_core.h  file_manager.h  humble_engine.h  i_file_manager.h  ilogger.h  irenderer.h  logger.h  renderer.h  service_container.h
include/core/: engine_core.h
include/game/: game.h
include/logging/: logger.h
include/rendering/: irenderer.h  renderer.h
include/resources/: resource_manager.h
src/: engine.cpp  file_manager.cpp  logger.cpp  renderer.cpp
src/core/: engine_core.cpp
src/game/: game.cpp
src/logging/: logger.cpp
src/rendering/: renderer.cpp
tests/: test_engine.cpp
